Format, text fix and overflow fix

--- a/styles.css
+++ b/styles.css
@@ -21,19 +21,24 @@ body {
     animation: darken-sky 60s alternate 0s 2;
 }
 
-#instruction {
+#instruction-wrapper-wrapper {
+    display: flex;
     position: absolute;
     top: 1.5%;
     left: 2.5%;
+}
+
+#instruction {
     font-family: 'VT323', monospace;
     font-size: 4.5vh;
+    letter-spacing: 0.07em;
     border-right: 0.15em solid white;
     color: white;
     overflow: hidden;
     white-space: nowrap;
     animation: typing 5s steps(31),
-               blinking 1s steps(1) infinite,
-               hiding 7s linear 6s 1;
+        blinking 1s steps(1) infinite,
+        hiding 7s linear 6s 1;
     animation-fill-mode: forwards;
 }
 
@@ -49,6 +54,7 @@ body {
 
 #plain {
     position: absolute;
+    overflow: hidden;
     width: 100%;
     height: 40vh;
     margin-top: 60vh;
@@ -271,6 +277,15 @@ body {
 }
 
 /* Mountain Horizon */
+.mountains {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+}
+
 .mountain {
     position: absolute;
     background-color: black;
@@ -388,32 +403,30 @@ body {
     z-index: -2;
     margin: 3vh;
     border-radius: 50%;
-    background: linear-gradient(
-        rgb(255, 255, 0) 0%,
-        rgb(255, 153, 102) 40%,
-        transparent 40%,
-        transparent 41%,
-        rgb(255, 150, 105) 41%,
-        rgb(255, 140, 115) 45%,
-        transparent 45%,
-        transparent 47%,
-        rgb(255, 135, 120) 47%,
-        rgb(255, 122, 133) 52%,
-        transparent 52%,
-        transparent 55%,
-        rgb(255, 115, 140) 55%,
-        rgb(255, 99, 156) 61%,
-        transparent 61%,
-        transparent 65%,
-        rgb(255, 89, 166) 65%,
-        rgb(255, 71, 184) 72%,
-        transparent 72%,
-        transparent 77%,
-        rgb(255, 59, 196) 77%,
-        rgb(255, 38, 217) 85%,
-        transparent 85%,
-        transparent 100%
-        );
+    background: linear-gradient(rgb(255, 255, 0) 0%,
+            rgb(255, 153, 102) 40%,
+            transparent 40%,
+            transparent 41%,
+            rgb(255, 150, 105) 41%,
+            rgb(255, 140, 115) 45%,
+            transparent 45%,
+            transparent 47%,
+            rgb(255, 135, 120) 47%,
+            rgb(255, 122, 133) 52%,
+            transparent 52%,
+            transparent 55%,
+            rgb(255, 115, 140) 55%,
+            rgb(255, 99, 156) 61%,
+            transparent 61%,
+            transparent 65%,
+            rgb(255, 89, 166) 65%,
+            rgb(255, 71, 184) 72%,
+            transparent 72%,
+            transparent 77%,
+            rgb(255, 59, 196) 77%,
+            rgb(255, 38, 217) 85%,
+            transparent 85%,
+            transparent 100%);
     filter: blur(1.2px) drop-shadow(16px 16px 20px rgba(255, 0, 200, 0.3));
     animation: sunset 60s alternate 0s 2;
 }
@@ -424,6 +437,7 @@ body {
     40% {
         filter: blur(1.2px);
     }
+
     100% {
         transform: translateY(52vh) scale(1.3);
         filter: blur(15px);
@@ -440,15 +454,19 @@ body {
     0% {
         width: 0;
     }
+
     100% {
-        width: 57.2vh;
+        width: 100%;
     }
 }
 
 @keyframes blinking {
-    0%, 100% {
+
+    0%,
+    100% {
         border-color: transparent;
     }
+
     50% {
         border-color: white;
     }
